--- a/.gitignore
+++ b/.gitignore
@@ -12,6 +12,9 @@
 # Generated files
 .idea/**/contentModel.xml
 
+#Log file
+*.log
+
 # Sensitive or high-churn files
 .idea/**/dataSources/
 .idea/**/dataSources.ids
