--- a/.gitignore
+++ b/.gitignore
@@ -220,3 +220,22 @@ cython_debug/
 /.idea/.gitignore
 /.idea/projet_IA.iml
 /.idea/vcs.xml
+
+### VisualStudioCode ###
+.vscode/*
+!.vscode/settings.json
+!.vscode/tasks.json
+!.vscode/launch.json
+!.vscode/extensions.json
+!.vscode/*.code-snippets
+
+# Local History for Visual Studio Code
+.history/
+
+# Built Visual Studio Code Extensions
+*.vsix
+
+### VisualStudioCode Patch ###
+# Ignore all local history of files
+.history
+.ionide
