--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -67,8 +67,7 @@ test_apacheLogInfo:
     - python3 -m unittest tests/test_apacheLogInfo.py
 
 pylint:
-  stage:
-    - test
+  stage: test
   before_script:
     - mkdir -p public/badges public/lint
     - echo undefined > public/badges/$CI_JOB_NAME.score
