--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -9,7 +9,7 @@ stages:
 
 # Official language image. Look for the different tagged releases at:
 # https://hub.docker.com/r/library/python/tags/
-image: python-docker-test
+image: http://devops.telecomste.fr:5050/printerfaceadmin/2022-23/group6:python-docker-test
 
 # Change pip's cache directory to be inside the project directory since we can
 # only cache local items.
