--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -16,32 +16,13 @@ build:
   variables:
     IMAGE_TAG: $CI_REGISTRY_IMAGE:$CI_COMMIT_REF_SLUG
   script:
+    - apk add --no-cache bash python3
     - docker login -u $CI_REGISTRY_USER -p $CI_REGISTRY_PASSWORD $CI_REGISTRY
     - docker build -t $IMAGE_TAG .
     - docker push $IMAGE_TAG
 
 image: devops.telecomste.fr:5050/printerfaceadmin/2022-23/group6:python-docker-test
 
-# Change pip's cache directory to be inside the project directory since we can
-# only cache local items.
-variables:
-  PIP_CACHE_DIR: "$CI_PROJECT_DIR/.cache/pip"
-  TEST_DIR: "$CI_PROJECT_DIR/tests"
-
-# Pip's cache doesn't store the python packages
-# https://pip.pypa.io/en/stable/topics/caching/
-#
-# If you want to also cache the installed packages, you have to install
-# them in a virtualenv and cache it as well.
-cache:
-  paths:
-    - .cache/pip
-    - venv/
-
-before_script:
-  - python --version  # For debugging
-  - virtualenv venv
-  - source venv/bin/activate
 
 test_loadConfiguration:
   stage: test
