--- a/tests/Dockerfile
+++ b/tests/Dockerfile
@@ -1,4 +1,5 @@
-FROM python:latest
+FROM python:3.11.1-slim-buster as final
 WORKDIR /app
-COPY requirements.txt requirements.txt
-RUN pip install -r requirements.txt
+COPY requirements_test.txt requirements.txt
+COPY . .
+RUN pip3 install --prefer-binary --no-cache --no-cache-dir -r requirements.txt
