--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -15,6 +15,7 @@ before_script:
 
 stages:
   - build
+  - build-test
   - test
   - lint
 
@@ -24,8 +25,8 @@ build:
     - docker build --pull -t "$CI_REGISTRY_IMAGE" .
     - docker push $CI_REGISTRY_IMAGE
 
-test:
-  stage: test
+build-test:
+  stage: build-test
   script:
     - docker build --pull -t $CI_REGISTRY_IMAGE_TEST .
     - docker push $CI_REGISTRY_IMAGE_TEST
