--- a/tests/Dockerfile
+++ b/tests/Dockerfile
@@ -3,3 +3,5 @@ WORKDIR /app
 COPY requirements_test.txt requirements.txt
 COPY . .
 RUN pip3 install --prefer-binary --no-cache --no-cache-dir -r requirements.txt
+
+ENTRYPOINT /app/tests
