Update .gitlab-ci.yml file

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -25,7 +25,7 @@ linter:
   stage : lint
   script:
     - pip install pycodestyle
-    - pycodestyle .
+    - pycodestyle
 
 deployment:
   stage: deploy
