Update .gitlab-ci.yml file

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -24,8 +24,8 @@ test_apacheLogInfo:
 linter:
   stage : lint
   script:
-    - pip install pycodestyle
-    - pycodestyle
+    - pip install pylint
+    - pylint
 
 deployment:
   stage: deploy
