--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -25,7 +25,14 @@ linter:
   stage : lint
   script:
     - pip install pylint
-    - pylint *.py --fail-under=5.0
+    - pylint *.py --fail-under=7.0
+
+coverage:
+  stage: coverage
+  script:
+    - pip install coverage
+    - coverage run -m pytest
+    - coverage report --fail-under=50
 
 deployment:
   stage: deploy
