--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -26,7 +26,7 @@ coverage:
   stage: coverage
   script:
     - pip install coverage
-    - coverage run -m unittest tests/test_apacheLogInfo.py tests/test_apacheLogParser.py tests/test_loadConfiguration.py
+    - coverage run -m unittest tests/test_apacheLogInfo.py tests/test_apacheLogParser.py
     - coverage report --fail-under=50
 
 deployment:
